--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-aiogram = "^3.13.1"
 pydantic-settings = "^2.5.2"
 pytz = "^2024.2"
+aiogram = "^3.13.1"
+requests = "^2.32.3"
 
 
 [build-system]
